Bug 72031 - RTF: Pasting symbols from Character Map
Summary: RTF: Pasting symbols from Character Map
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
3.5.7.2 release
Hardware: Other Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.5.0 target:4.4.0.0.beta2 tar...
Keywords: filter:rtf, regression
: 81224 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-26 12:03 UTC by Urmas
Modified: 2015-12-17 12:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Clipboard dump (198 bytes, application/rtf)
2014-11-24 21:01 UTC, Andras Timar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Urmas 2013-11-26 12:03:28 UTC
Select any character font in Windows 7 Character Map and copy some symbols.
Paste them into Writer.

Only some characters will be pasted correctly. The letters will be pasted for the others, instead of U+F0xx symbol characters.
Comment 1 Regina Henschel 2013-11-27 19:59:07 UTC
I cannot reproduce the problem, it works for me.
Please tell, what font do you use. U+F0xx is the "personal range" and not standardized, therefore the font is essential. And please tell, whether do you insert it as "Formatted text [RTF]" or as "Unformatted text", and whether the same font is set for these characters in LibreOffice.
Comment 2 Urmas 2013-11-27 21:19:10 UTC
U+F0xx is the internal representation of symbol characters, as you should have known as a QA.

Copy 5 characters starting from 0xC6 from 'Symbol' font.
Paste them into Writer.
'ÆÇÈÉÊ' are inserted instead.
Comment 3 Regina Henschel 2013-11-27 22:08:26 UTC
The Private Use Area has Range: E000-F8FF, see http://www.unicode.org/charts/PDF/UE000.pdf
When you paste the characters you must ensure, that the font "Symbol" is used. You can do this by inserting as "Formatted text [RTF]" or by assigning the font directly later on.
Works for me.
Comment 4 Urmas 2013-11-27 22:32:25 UTC
Same behavior confirmed with Windows 8.1. Reopening.

Regina: learn the product you are trying to comment on. Please.
Comment 5 Urmas 2014-07-12 01:56:46 UTC
*** Bug 81224 has been marked as a duplicate of this bug. ***
Comment 6 Andras Timar 2014-11-24 21:01:10 UTC
Created attachment 109962 [details]
Clipboard dump

I selected and copied 0xC5 symbol from Character Map (plus sign in  a circle). I dumped the clipboard contents to a file. Writer cannot open this rtf file properly.
Comment 7 Andras Timar 2014-11-24 21:38:03 UTC
It was good in LibreOffice 3.4.6.2, mark as regression.
Comment 8 Miklos Vajna 2014-11-28 21:02:25 UTC
Bibisect range is eb847b33f7ea5b5e103886da7eb5dd1cc3061422..76fe205d7e0fe0a73616453209d8094cab9ce79f, probably my bbe3627eece0c3486e7ea11f2f13377aaa3a8fed broke this.
Comment 10 Commit Notification 2014-11-30 18:57:45 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4cf0b919ed1d3bede755f403774fb2dc05b86a2a&h=libreoffice-4-4

fdo#72031 RTF import: bogus call to getBestTextEncodingFromLocale()

It will be available in 4.4.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-12-01 07:49:35 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2bc3dec751921984978fd7335c9dbd39a583fc90&h=libreoffice-4-3

fdo#72031 RTF import: bogus call to getBestTextEncodingFromLocale()

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Robinson Tryon (qubit) 2015-12-17 12:36:24 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Remove redundant rtf_filter.
[NinjaEdit]